--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,7 +41,7 @@ jobs:
           rm -rf ${{ secrets.VPS_TARGET_DIR }}/*
 
     - name: Copy files via SCP
-      uses: appleboy/scp-action@v0.1.7
+      uses: appleboy/scp-action@v0.1.8
       with:
         host: ${{ secrets.VPS_HOST }}
         username: ${{ secrets.VPS_USERNAME }}
@@ -50,6 +50,7 @@ jobs:
         source: "./publish/*"
         target: ${{ secrets.VPS_TARGET_DIR }}
         strip_components: 1
+        rm: false
 
     - name: Start Service
       uses: appleboy/ssh-action@v1.0.3
